# cpp

./: README.md  Servo.ino
PR Week 1/: CMakeLists.txt  main.cpp
PR Week 2/: CMakeLists.txt  deposit.h  main.cpp  money_database.cpp  money_database.h
PR Week 3/: CMakeLists.txt  Complex.cpp  Complex.h  main.cpp
PR Week 4/labs_04/: options.cpp  run.sh
PR Week 5/labs_05/: main.cpp  word_counter.cpp  word_counter.h
PR Week 6/: main.cpp  numbers.cpp  numbers.h
PR Week 7/: num_vector.cpp
WC Week 2/Opdracht 1/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  main.cpp
WC Week 2/Opdracht 2/: CMakeLists.txt  Replace.cpp  Replace.h  main.cpp  output.txt  smelly.redacted  smelly.txt
WC Week 3/Opdracht 1/: CMakeLists.txt  Rational.cpp  Rational.h  input_file.in  input_file.out  main.cpp  rational_calc.cpp  rational_calc.h
WC Week 4/: CMakeLists.txt  Counter.cpp  Counter.h  FileCounts.h  Options.cpp  Options.h  main.cpp  run.sh  test.txt
WC Week 5/: CMakeLists.txt  OutputFile.cpp  OutputFile.h  main.cpp  run.sh
WC Week 6/: CMakeLists.txt  String.cpp  String.h  main.cpp
WC Week 7/: CMakeLists.txt  Rational.cpp  Rational.h  main.cpp
Week1/: CMakeLists.txt  Replace.cpp  Replace.h  file.clean  file.txt  main.cpp
example_exam_2024/task_1_2/: NumberFinder.cpp  NumberFinder.h  Options.cpp
example_exam_2024/task_3/: IntVector.cpp  IntVector.h
example_exam_2024_solution/task_1_2/: NumberFinder.cpp  NumberFinder.h  Options.cpp  task_1_2.cpp
example_exam_2024_solution/task_3/: IntVector.cpp  IntVector.h
untitled/: main.cpp
(+3 files in other folders)
